# modernCpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CreateVersion.cmake  GenerateVersionHeader.cmake  README.md  conan_provider.cmake  conandata.yml  main.cpp  modern  moderncpp_version.h.in
.github/workflows/: cmake-multi.yml  pull_request.yml  push.yml  steps.yml
Tests/: CMakeLists.txt  benchmark.cpp  cpputestmain.cpp  testMain.cpp  testMore.cpp  testNonTypeStack.cpp  testTemplateArchitecture.cpp
basiclib/: CMakeLists.txt
basiclib/include/: basicLibrary.h  basicLibraryExport.h  customeroverloader.h  functiontemplates.h  geometry.h  node.h  stack.h  traits.h
basiclib/src/: basicLibrary.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: GenerateVersion.cmake  GenerateVersionHeader.cmake
engine/: CMakeLists.txt
engine/include/: openGL.h
engine/src/: openGL.cpp
glad/: CMakeLists.txt  glad.c
glad/include/glad/: glad.h
include/: configure.h
mainlib/: CMakeLists.txt
mainlib/include/: abstractfabric.h  appconfigurator.h  bridge.h  command.h  concurrency.h  decorator.h  effictive.h  factory.h  fileHandling.h  ianimal.h  ifood.h  learningtemplate.h  mathematics.h  modernLibrary.h  modernLibraryExport.h  mutex.h  nontypestack.h  passkey.h  raiitemplates.h  singleton.h  templates.h  visitor.h
mainlib/src/: abstractfabric.cpp  appconfigurator.cpp  bridge.cpp  commands.cpp  configure.cpp  effective.cpp  factory.cpp  fileHandling.cpp  ianimal.cpp  ifood.cpp  mathematics.cpp  modernLibrary.cpp  singleton.cpp  visitor.cpp
src/: main.cpp
testdrivenlib/: CMakeLists.txt
testdrivenlib/Tests/: CMakeLists.txt  testgeoserver.cpp  testretweetcollection.cpp  testsoundex.cpp  testsupermarketpricing.cpp  testwithmock.cpp  testwithparameters.cpp
testdrivenlib/Tests/utility/: overload.h  privateaccess.h
testdrivenlib/include/: soundex.h  testdrivenLibraryExport.h
testdrivenlib/src/: soundex.cpp  testdrivenLibrary.cpp
